# sutlac-gtk-theme

./: Makefile.am  README.md  configure.ac  yap.sh
extra/: Makefile.am
extra/chrome/adapta-nokto-theme/: manifest.json
extra/chrome/adapta-theme/: manifest.json
extra/gedit/: README.md  sutlac.xml
extra/plank/: dock.theme
extra/telegram/dark/: colors.tdesktop-theme
extra/telegram/light/: colors.tdesktop-theme
gtk/: Makefile.am  index.theme  index.theme-eta  index.theme-nokto  index.theme-nokto-eta
gtk/asset/: assets-gtk2.svg.in
gtk/asset/assets-gtk2-scripts/: clone-assets-gtk2.sh  recolor-assets-gtk2.sh  render-assets-gtk2-arrow.sh  render-assets-gtk2-button.sh  render-assets-gtk2-checkradio.sh  render-assets-gtk2-column.sh  render-assets-gtk2-entry.sh  render-assets-gtk2-handle.sh  render-assets-gtk2-misc.sh  render-assets-gtk2-range.sh  render-assets-gtk2-scrollbar.sh  render-assets-gtk2-spin.sh  render-assets-gtk2.sh
gtk/asset/assets-gtk3-scripts/: clone-assets-gtk3.sh  recolor-assets-gtk3.sh  render-assets-gtk3-checkbox.sh  render-assets-gtk3-misc.sh  render-assets-gtk3-radio.sh  render-assets-gtk3-slider.sh  render-assets-gtk3-toggle.sh  render-assets-gtk3-windowbutton-eta.sh  render-assets-gtk3-windowbutton.sh  render-assets-gtk3.sh
gtk/gtk-2.0/: gtkrc  gtkrc-dark  gtkrc-dark-eta  gtkrc-eta  recolor-gtk2.sh
gtk/sass/: README  compile-gresource.sh  gtk-dark-eta.gresource.xml.in  gtk-dark-legacy.gresource.xml.in  gtk-dark.gresource.xml.in  gtk-eta.gresource.xml.in  gtk-legacy.gresource.xml.in  gtk.gresource.xml.in  parse-sass.sh
gtk/sass/common/: _colors.scss  _drawing-legacy.scss  _drawing.scss
m4/: adapta-color-scheme.m4  adapta-gnome.m4  adapta-option.m4
shell/: Makefile.am
shell/asset/: clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  clone-assets-unity.sh  clone-assets-xfce.sh  render-assets-cinnamon-thumb.sh
shell/gnome-shell/extensions/window-list/: README
shell/sass/: README  gnome-shell-theme.gresource.sh  parse-sass.sh
shell/sass/common/: _drawing.scss
shell/xfce-notify-4.0/: gtkrc
wm/: Makefile.am
wm/asset/assets-metacity-scripts/: clone-assets-metacity.sh  render-assets-metacity.sh
wm/asset/assets-openbox-scripts/: clone-assets-openbox.sh
wm/asset/assets-xfwm-scripts/: recolor-assets-xfwm.sh  render-assets-xfwm-button.sh  render-assets-xfwm-edge.sh  render-assets-xfwm-title.sh  render-assets-xfwm.sh
wm/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
wm/openbox-3/: compton.conf
